--- a/client/task-scheduler/src/styles/TaskView.css
+++ b/client/task-scheduler/src/styles/TaskView.css
@@ -61,12 +61,6 @@
     transform: translate(-50%, -50%);
 }
 
-.project-sidebar-resize-handle:hover,
-.task-layout.is-resizing .project-sidebar-resize-handle {
-    background: rgba(63, 176, 186, 0.12);
-    box-shadow: inset 1px 0 0 rgba(63, 176, 186, 0.28), inset -1px 0 0 rgba(63, 176, 186, 0.28);
-}
-
 .project-sidebar-eyebrow {
     color: #fff;
     margin: 0;
